[package]
name = "valkey-sink-loadtest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "loadtest"
path = "src/main.rs"

[dependencies]
redis = { version = "0.27", features = ["tokio-comp"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
